    of current theme.
* Changed icon size handling on task bar - it may now maintain the same
    size as rest of icons. It may affect users who are used to have them
    smaller, it's why this feature was made configurable, corresponding
    config variable is UseSmallerIcons and default is 1 (old behavior).
* Changed volume slider popup behavior - it now hides when loses focus.

0.8.2
-------------------------------------------------------------------------
* Fixed crash in taskbar plugin after number of desktops was updated.
* Fixed incorrect panel geometry initialization.
* Fixed crash with invalid size of icon in _NET_WM_ICON property.
* Fixed memory leak on 'indicator' plugin destruction.
* Replaced old commands:
    - Use notify send instead of xmessage
    - Use nm-connection-editor instead of network-admin

0.8.1
-------------------------------------------------------------------------
* Improved OSS headers detection a bit.
* Fixed expand setting on plugins with default_expand when more than one
    is available on the same panel.
* Fixed icon for task button that retrieved using WM_HINTS.
* Fixed wrong PanelIconGrid arrangement in vertical panel orientation.
* Fixed missing handlers disconnect when destroying Task structure.
* Removed writing debug messages to file when 'indicator' plugin is in
    use - it will write all the debug there and that changes the behavior
    which was not intended really.
* Corrected background for 'indicator' plugin.
* Fixed update 'indicator' plugin on configuration changes.
* Fixed battery status: if discharge rate is 0 then it's charged.
* Fixed incorrect cycle in netproc_devicelist_clear() leading to crash on
    resume (after suspend).
* Fixed scanning for temperature sensors which failed with some kernels.
* Changed reconfiguring panel behavior: callbacks to plugins will be sent
    on idle, not immediately to avoid "stuck" spin button (and eventually
    even crash was possible).