@@ -61,6 +61,7 @@
     smaller, it's why this feature was made configurable, corresponding
     config variable is UseSmallerIcons and default is 1 (old behavior).
 * Changed volume slider popup behavior - it now hides when loses focus.
+* Fixed invalid memory access in weather plugin.
 
 0.8.2
 -------------------------------------------------------------------------
